--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,6 @@
         tools:replace="android:networkSecurityConfig"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.xilli.stealthnet.Activities.UnlockAllActivity" />
 
 <!--        <meta-data-->
 <!--            android:name="com.google.android.gms.ads.APPLICATION_ID"-->
@@ -44,8 +43,11 @@
         </activity>
         <activity
             android:name="com.xilli.stealthnet.Activities.Servers"
-            android:parentActivityName="com.xilli.stealthnet.Activities.MainActivity" />
-        <activity android:name="com.xilli.stealthnet.Activities.MainActivity" />
+       />
+
+        <activity android:name="com.xilli.stealthnet.Activities.MainActivity"
+            android:exported="false"/>
+
 <!--        <activity android:name="com.facebook.ads.AudienceNetworkActivity" android:hardwareAccelerated="true" />-->
 
         <activity
