--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,9 +44,14 @@
         <activity
             android:name="com.xilli.stealthnet.Activities.Servers"
        />
+        <service
+            android:name=".Activities.MyBackgroundService"
+            android:enabled="true"
+            android:exported="false" />
 
         <activity android:name="com.xilli.stealthnet.Activities.MainActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan|adjustResize"/>
 
 <!--        <activity android:name="com.facebook.ads.AudienceNetworkActivity" android:hardwareAccelerated="true" />-->
 
