notification_Android 13_ and _back_to_Rate_Screen_ondestroy

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -155,4 +155,6 @@ dependencies {
     implementation 'com.github.oneconnectapi:OneConnectLib:v1.0.9'
     // OneConnect Implementation
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+
+    implementation "pub.devrel:easypermissions:3.0.0"
 }
