--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,7 +91,7 @@ dependencies {
     implementation 'com.android.billingclient:billing:4.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-
+    implementation "androidx.work:work-runtime:2.7.0"
 
     implementation "com.airbnb.android:lottie:4.2.0"
 
