--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,4 +157,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 
     implementation "pub.devrel:easypermissions:3.0.0"
+    //work manager
+    implementation "androidx.work:work-runtime:2.7.0"
+
 }
